sort.pancake.lessons.sort.pancake.CohenPancake.scala.error
CohenPancake:24: error: Missing closing brace `}' assumed here
def solve() {
^